Q-3-Netpol/qa.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: qa
  labels:
    environment: testing
