Q-3-Netpol/every-namespace.yaml
apiVersion: v1
kind: Pod
metadata:
  name: every-namespace
  labels:
    environment: testing
spec:
  containers:
  - name: every-namespace
    image: nginx:latest
