Q-3-Netpol/product-service.yaml
apiVersion: v1
kind: Pod
metadata:
  name: product-service
  namespace: dev-team
  labels:
    environment: dev-team
spec:
  containers:
  - name: product-service
    image: nginx:latest
