Q-3-Netpol/sleleton.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: default
spec:
  podSelector: {}
   policyTypes:
  - Ingress
   ingress:
  - from:
  - from:
